RESOLVED FIXED239985
Crash in WebKit::ModelElementController::modelElementCreateRemotePreview
https://bugs.webkit.org/show_bug.cgi?id=239985
Summary Crash in WebKit::ModelElementController::modelElementCreateRemotePreview
Gabriel Nava Marino
Reported 2022-05-02 14:54:28 PDT
Attachments
Patch for landing (11.68 KB, patch)
2022-05-02 14:59 PDT, Gabriel Nava Marino
no flags
Patch for landing (11.68 KB, patch)
2022-05-02 15:01 PDT, Gabriel Nava Marino
no flags
Gabriel Nava Marino
Comment 1 2022-05-02 14:59:24 PDT
Created attachment 458710 [details] Patch for landing
Gabriel Nava Marino
Comment 2 2022-05-02 15:01:02 PDT
Created attachment 458711 [details] Patch for landing
EWS
Comment 3 2022-05-02 18:33:25 PDT
Committed r293707 (250196@main): <https://commits.webkit.org/250196@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 458711 [details].
Note You need to log in before you can comment on or make changes to this bug.